# clibus

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/clibus/: clibus.h  http_client.h  i_http_client.h
src/: clibus.cpp  http_client.cpp  main.cpp
test/: clibus_test.cpp  fetchurl_test.cpp  mock_http_client.h  post_test.cpp
